--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 /Attheria_clone_3
 /Attheria_clone_4
 /Attheria_clone_5
+/Attheria Testing
+/TestMod
+/daw
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
