World settings - save/load system

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /Attheria Testing
 /TestMod
 /daw
+/Attheria/Assets/Graphics/Materials/Purchased
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -63,6 +64,7 @@ sysinfo.txt
 
 # Builds
 *.apk
+*.aab
 *.unitypackage
 
 # Crashlytics generated file
