Migrations to toml

--- a/Attheria/Assets/packages.config
+++ b/Attheria/Assets/packages.config
@@ -8,5 +8,8 @@
   <package id="Microsoft.ClearScript.V8.Native.win-x86" version="7.4.2" />
   <package id="Microsoft.ClearScript.Windows" version="7.4.2" />
   <package id="Microsoft.ClearScript.Windows.Core" version="7.4.2" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.2" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net48" version="1.0.2" />
   <package id="Newtonsoft.Json" version="13.0.1" />
+  <package id="Tommy" version="3.1.2" />
 </packages>
