--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,18 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
+/Builds/Client/Il2cpp/*
+!/Builds/Client/Il2cpp/.gitkeep
+/Builds/Client/Mono/*
+!/Builds/Client/Mono/.gitkeep
+/Builds/Client_Linux/Mono/*
+!/Builds/Client_Linux/Mono/.gitkeep
+/Builds/Client_Linux/Il2cpp/*
+!/Builds/Client_Linux/Il2cpp/.gitkeep
+/Builds/Server/*
+!/Builds/Server/.gitkeep
+/Builds/Server_Linux/*
+!/Builds/Server_Linux/.gitkeep
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /Attheria_clone_0
